# ceiling-tracker

./: .gitignore  krx_full_test.py  krx_http2_test.py  krx_json_playground.py  krx_json_test.py  krx_login_test.py  krx_otp_test.py  pyproject.toml  run_daily.bat
src/: __init__.py  cli.py
src/application/: __init__.py  daily_update_service.py  excel_export_service.py  range_update_service.py  service.py
src/domain/: __init__.py  constants.py  model.py  ports.py
src/infrastructure/: __init__.py  adapters.py  excel_renderer.py  krx_adapter.py  repository.py  storage_adapters.py
src/interface/: __init__.py
tests/integration/: test_excel_repo.py  test_krx_adapter.py  test_krx_history.py
tests/unit/application/: test_service.py
tests/unit/domain/: test_models.py
tests/unit/infrastructure/: test_new_high_features.py  test_parquet_repository.py  test_pykrx_adapter.py
