[project]
name = "ceiling-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "finance-datareader>=0.9.101",
    "google-api-python-client>=2.188.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "pyarrow>=23.0.1",
    "pykrx>=1.2.3",
    "pytest>=9.0.2",
    "setuptools>=80.10.1",
    "tqdm>=4.67.1",
]
